[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Manikanta, this is my first web app
         <h4>Header 4 using on this web app</h4>
+        <h5>Header 5 using on this web app</h5>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
