--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
         <h4>Header 4 using on this web app</h4>
         <h5>Header 5 using on this web app</h5>
         </div>
-        <div>
+        <div class="right">
         <h6>this is header 6 tag</h6>
         </div>
         <script type="text/javascript" src="/ui/main.js">
