[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <title>Home</title>
+       
     </head>
     <body>
+         <a href="/article1">Article 1</a>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
