--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
          <a href="/article1">Article 1</a>
+         <a href="/article2">Article 2</a>
+         <a href="/article3">Article 3</a>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
