articles all added

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -5,6 +5,9 @@
 	<a href="/">Home</a>
 </head>
 <body>
+	<a href="/article1">Article 1</a>
+         <a href="/article2">Article 2</a>
+         <a href="/article3">Article 3</a>
 <div>
 	<p>
 <script> document.write(new Date().toLocaleDateString()); </script>
