--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <title>Home</title>
-       
+        <a href="/">Home</a>
     </head>
     <body>
          <a href="/article1">Article 1</a>
